--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,13 +6,18 @@
         <div class="menu-button">Change Avatar</div>
         <div class="menu-button">Account settings</div>
     </ul>
+    <form action="{{ url_for('add_pp') }}" method="POST" enctype=multipart/form-data>
+        <label for="image" >Upload an image of your choice:</label>
+        <input type="file" id="image" name="image" accept="image/*">
+        <button type="submit">UPLOAD AVATAR</button>
+    </form>
 {% endblock %}
 {% block content %}
     <div class="container d-flex justify-content-center align-items-center">
     <div class="card">
         <div class="upper"> <img src="https://i.imgur.com/Qtrsrk5.jpg" class="img-fluid"> </div>
         <div class="user text-center">
-            <div class="profile"> <img src="{{ url_for('static', filename=user_info['profile_picture'] if user_info['profile_picture'] else 'no_profile.png') }}" class="rounded-circle" width="80"> </div>
+            <div class="profile"> <img src="{{ url_for('static', filename=user_info['profile_picture'] if user_info['profile_picture'] else 'no_profile.png') }}" class="rounded-pill" width="100"> </div>
         </div>
         <div class="mt-5 text-center">
             <h4 class="mb-0">{{ user_info['username'] }}'s profile-page</h4> <span class="text-muted d-block mb-2">member since {{ user_info['registration_date'].strftime('%Y-%m-%d') }}</span> <button class="btn btn-primary btn-sm follow">Follow</button>
