added sidebar profile

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,7 +15,7 @@
     <form action="{{ url_for('add_pp') }}" method="POST" enctype=multipart/form-data>
         <label for="image" class="form-label">Upload an image of your choice:</label>
         <input type="file" class="form-control" id="image" name="image" accept="image/*">
-        <button type="submit">UPLOAD AVATAR</button>
+        <button type="submit" class="btn btn-primary">UPLOAD AVATAR</button>
     </form>
       </div>
     </div>
