--- a/templates/user.html
+++ b/templates/user.html
@@ -8,20 +8,20 @@
         <div class="card">
             <div class="upper"> <img src="https://i.imgur.com/Qtrsrk5.jpg" class="img-fluid"> </div>
             <div class="user text-center">
-                <div class="profile"> <img src="{{ url_for('static', filename=user_info['profile_picture'] if user_info['profile_picture'] else 'no_profile.png') }}" class="rounded-circle" width="80"> </div>
+                <div class="profile"> <img src="{{ url_for('static', filename=user_info['profile_picture'] if user_info['profile_picture'] else 'no_profile.png') }}" class="rounded-pill" width="80"> </div>
             </div>
             <div class="mt-5 text-center">
                 <h4 class="mb-0">{{ user_info['username'] }}'s profile-page</h4> <span class="text-muted d-block mb-2">
-                member since {{ user_info['registration_date'].strftime('%Y-%m-%d') if timeformat else user_info['registration_date'] }}</span> <button class="btn btn-primary btn-sm follow">Follow</button>
+                member since {{ user_info['registration_date'].strftime('%Y-%m-%d') if timeformat else user_info['registration_date'].strftime('%Y-%m-%d') }}</span> <button class="btn btn-primary btn-sm follow">Follow</button>
                 <div class="d-flex justify-content-between align-items-center mt-4 px-4">
                     <div class="stats">
                         <h6 class="mb-0">Questions</h6> <span>{{ questions|length }}</span>
                     </div>
                     <div class="stats">
-                        <h6 class="mb-0">Answers</h6> <span>142</span>
+                        <h6 class="mb-0">Answers</h6> <span>{{ answers|length }}</span>
                     </div>
                     <div class="stats">
-                        <h6 class="mb-0">Comments</h6> <span>129</span>
+                        <h6 class="mb-0">Comments</h6> <span>{{ comments|length }}</span>
                     </div>
                     <div class="stats">
                         <h6 class="mb-0">Reputation</h6> <span>{{ user_info['reputation'] }}</span>
@@ -42,7 +42,31 @@
         <ul class="list-group card-body">
             {% for question in questions %}
                 <li class="list-group-item card-title"><div><a href="{{ url_for('display_question', id=question['id']) }}"> {{ question['title'] }} </a></div></li>
-                <li class="list-group-item"><div class="card-text bg-light text-dark">{{ question['message'][0:45] }}...</div></li>
+                <li class="list-group-item"><div style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" class="card-text bg-light text-dark">{{ question['message'] }}</div></li>
+            {% endfor %}
+        </ul>
+        </div>
+    {% endif %}
+
+    {%  if answers %}
+        <div class="card">
+            <div class="card-header"><h2>Answers by this user</h2></div>
+        <ul class="list-group card-body">
+            {% for answer in answers %}
+                <li class="list-group-item"><div style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" class="card-text bg-light text-dark">
+                    <a href="{{ url_for('display_question', id=answer['question_id']) }}">{{ answer['message'] }}
+                    </a></div></li>
+            {% endfor %}
+        </ul>
+        </div>
+    {% endif %}
+    {%  if comments %}
+        <div class="card">
+            <div class="card-header"><h2>Comments by this user</h2></div>
+        <ul class="list-group card-body">
+            {% for comment in comments %}
+                <li class="list-group-item"><div style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" class="card-text bg-light text-dark">
+                    {{ comment['message'] }}</div></li>
             {% endfor %}
         </ul>
         </div>
